--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 <!DOCTYPE html>
+<!--
+  index.html - Sitio Kumbia Sound
+  Comentarios en español: estructura de la página y secciones principales.
+  - Header / Navbar
+  - Reproductor (fijo en el footer)
+  - Playlist desplegable
+  - Hero (vinilo) + sección Featured con previews
+  - Secciones: Recomendados, YouTube, Blog, Base de Datos, Juegos, Footer
+-->
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -19,7 +28,7 @@
             </div>
 
             <!-- Navegación principal -->
-            <nav class="main-nav">
+            <nav id="main-nav" class="main-nav" role="navigation" aria-label="Menú principal">
                 <ul>
                     <li><a href="#home" class="nav-link active">Inicio</a></li>
                     <li><a href="#blog" class="nav-link">Blog</a></li>
@@ -44,7 +53,7 @@
             </div>
 
             <!-- Menú móvil -->
-            <button class="mobile-menu-btn">
+            <button class="mobile-menu-btn" aria-controls="main-nav" aria-expanded="false" aria-label="Abrir menú">
                 <i class="fas fa-bars"></i>
             </button>
         </div>
@@ -57,10 +66,15 @@
             <span id="current-track" class="track-title">Selecciona una canción</span>
         </div>
         <div class="player-controls">
-            <button id="prev-btn" class="player-btn"><i class="fas fa-step-backward"></i></button>
-            <button id="play-btn" class="player-btn"><i class="fas fa-play"></i></button>
-            <button id="pause-btn" class="player-btn" style="display: none;"><i class="fas fa-pause"></i></button>
-            <button id="next-btn" class="player-btn"><i class="fas fa-step-forward"></i></button>
+            <button id="prev-btn" class="player-btn" aria-label="Anterior"><i class="fas fa-step-backward"></i></button>
+            <button id="play-btn" class="player-btn" aria-label="Reproducir"><i class="fas fa-play"></i></button>
+            <button id="pause-btn" class="player-btn" style="display: none;" aria-label="Pausar"><i class="fas fa-pause"></i></button>
+            <button id="next-btn" class="player-btn" aria-label="Siguiente"><i class="fas fa-step-forward"></i></button>
+            <!-- Tiempo y barra de progreso -->
+            <span id="current-time" class="track-time">0:00</span>
+            <input type="range" id="seek-bar" min="0" max="100" value="0" class="seek-bar" aria-label="barra de progreso">
+            <span id="duration-time" class="track-time">0:00</span>
+            <button id="mute-btn" class="player-btn" title="Silenciar/Des-silenciar"><i class="fas fa-volume-up"></i></button>
             <input type="range" id="volume-slider" min="0" max="100" value="50" class="volume-slider">
             <button id="playlist-btn" class="player-btn playlist-toggle">
                 <i class="fas fa-list"></i>
@@ -82,8 +96,8 @@
     <!-- Hero Section / Inicio -->
     <section class="hero" id="home">
         <div class="hero-content">
-            <h2 class="hero-title">VINILOS DE CUMBIA PERUANA</h2>
-            <p class="hero-subtitle">Música, cultura y tradición en cada giro</p>
+            <h2 class="hero-title">KUMBIA SOUND</h2>
+            <p class="hero-subtitle">Kumbiasound es una iniciativa cultural dedicada a la preservación, difusión y revalorización de la cumbia, con especial atención a la cumbia peruana y colombiana. A través de la curaduría musical, la investigación cultural y la producción de contenido, rescatamos joyas olvidadas de la cumbia, sin olvidar los clásicos que son sempiternos.</p>
             <div class="hero-actions">
                 <a href="#featured" class="btn-primary">Explorar Colección</a>
                 <a href="#youtube" class="btn-secondary">
@@ -93,85 +107,94 @@
         </div>
         <div class="hero-image">
             <!-- Imagen de fondo con vinilo -->
-            <div class="vinyl-disc"></div>
+            <div class="vinyl-disc" aria-hidden="true">
+                <!-- Brazo del tocadiscos (se anima cuando reproduce) -->
+                <div class="vinyl-arm" aria-hidden="true"></div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Featured / Destacados (ejemplo con previews) -->
+    <section class="featured-section" id="featured">
+        <div class="section-header">
+            <h2 class="section-title">DESTACADOS</h2>
+            <p class="section-subtitle">Escucha fragmentos y explora vinilos seleccionados</p>
+        </div>
+        <div class="featured-grid">
+            <div class="featured-card">
+                <div class="card-header">
+                    <span class="artist-year">Los Destellos • 1970</span>
+                    <h4 class="album-title">Cumbia Clásica</h4>
+                </div>
+                <p class="album-description">Fragmento representativo del sonido psicodélico.</p>
+                <div class="audio-preview">
+                    <button class="preview-btn" aria-pressed="false"><i class="fas fa-play"></i> Escuchar Fragmento</button>
+                    <!-- audio oculto para previews (audio-player.js lo maneja) -->
+                    <audio src="assets/audio/demo1.mp3" preload="metadata"></audio>
+                </div>
+                <div class="card-footer">
+                    <span class="price">Vinilo</span>
+                    <button class="btn-cart">Escuchar →</button>
+                </div>
+            </div>
+            <div class="featured-card">
+                <div class="card-header">
+                    <span class="artist-year">Grupo Celeste • 1985</span>
+                    <h4 class="album-title">Cumbia Andina</h4>
+                </div>
+                <p class="album-description">Fusión andina que marcó la década de los 80s.</p>
+                <div class="audio-preview">
+                    <button class="preview-btn" aria-pressed="false"><i class="fas fa-play"></i> Escuchar Fragmento</button>
+                    <audio src="assets/audio/demo2.mp3" preload="metadata"></audio>
+                </div>
+                <div class="card-footer">
+                    <span class="price">Vinilo</span>
+                    <button class="btn-cart">Escuchar →</button>
+                </div>
+            </div>
+            <div class="featured-card">
+                <div class="card-header">
+                    <span class="artist-year">Juaneco y su Combo • 1972</span>
+                    <h4 class="album-title">Cumbia Amazónica</h4>
+                </div>
+                <p class="album-description">Ritmos de la Amazonía con guitarra eléctrica y órgano.</p>
+                <div class="audio-preview">
+                    <button class="preview-btn" aria-pressed="false"><i class="fas fa-play"></i> Escuchar Fragmento</button>
+                    <audio src="assets/audio/demo3.mp3" preload="metadata"></audio>
+                </div>
+                <div class="card-footer">
+                    <span class="price">Vinilo</span>
+                    <button class="btn-cart">Escuchar →</button>
+                </div>
+            </div>
         </div>
     </section>
 
     <!-- Sección Destacados -->
-    <section class="featured-section" id="featured">
+    <!-- Recomendados Section -->
+    <section class="recommendations-section" id="recommendations">
         <div class="section-header">
-            <h2 class="section-title">LOS NUEVOS INGRESOS</h2>
-            <p class="section-subtitle">Descubre las últimas incorporaciones a nuestra colección</p>
+            <h2 class="section-title">RECOMENDADOS DEL MES</h2>
+            <p class="section-subtitle">Selección curatorial especial</p>
         </div>
-
-        <div class="featured-grid">
-            <!-- Artista 1 -->
-            <div class="featured-card">
-                <div class="card-header">
-                    <span class="artist-year">LOS DESTELLOS / 1972</span>
-                    <h3 class="album-title">El Ritmo de los Destellos</h3>
-                </div>
-                <div class="card-content">
-                    <p class="album-description">Cumbia psicodélica peruana en su máxima expresión</p>
-                    <div class="audio-preview">
-                        <button class="preview-btn">
-                            <i class="fas fa-play"></i> Escuchar preview
-                        </button>
-                        <audio class="preview-audio" src="assets/audio/demo1.mp3"></audio>
-                    </div>
-                </div>
-                <div class="card-footer">
-                    <span class="price">$65</span>
-                    <button class="btn-cart">
-                        <i class="fas fa-shopping-cart"></i> Agregar
-                    </button>
-                </div>
+        <div class="recommendations-grid">
+            <div class="recommendation-card">
+                <div class="rec-badge">Artista del Mes</div>
+                <h3>Los Hijos del Sol</h3>
+                <p>Descubre la cumbia chicha de los 80s</p>
+                <a href="#" class="rec-link">Explorar →</a>
             </div>
-
-            <!-- Artista 2 -->
-            <div class="featured-card">
-                <div class="card-header">
-                    <span class="artist-year">JUANECO Y SU COMBO / 1975</span>
-                    <h3 class="album-title">Cumbia Amazónica</h3>
-                </div>
-                <div class="card-content">
-                    <p class="album-description">Los sonidos selváticos de la cumbia peruana</p>
-                    <div class="audio-preview">
-                        <button class="preview-btn">
-                            <i class="fas fa-play"></i> Escuchar preview
-                        </button>
-                        <audio class="preview-audio" src="assets/audio/demo2.mp3"></audio>
-                    </div>
-                </div>
-                <div class="card-footer">
-                    <span class="price">$58</span>
-                    <button class="btn-cart">
-                        <i class="fas fa-shopping-cart"></i> Agregar
-                    </button>
-                </div>
+            <div class="recommendation-card">
+                <div class="rec-badge">Álbum del Mes</div>
+                <h3>"Cumbia Beat"</h3>
+                <p>Compilación esencial de cumbia peruana</p>
+                <a href="#" class="rec-link">Escuchar →</a>
             </div>
-
-            <!-- Artista 3 -->
-            <div class="featured-card">
-                <div class="card-header">
-                    <span class="artist-year">LOS MIRLOS / 1978</span>
-                    <h3 class="album-title">Cumbia Costeña</h3>
-                </div>
-                <div class="card-content">
-                    <p class="album-description">El clásico sonido de la cumbia limeña</p>
-                    <div class="audio-preview">
-                        <button class="preview-btn">
-                            <i class="fas fa-play"></i> Escuchar preview
-                        </button>
-                        <audio class="preview-audio" src="assets/audio/demo3.mp3"></audio>
-                    </div>
-                </div>
-                <div class="card-footer">
-                    <span class="price">$72</span>
-                    <button class="btn-cart">
-                        <i class="fas fa-shopping-cart"></i> Agregar
-                    </button>
-                </div>
+            <div class="recommendation-card">
+                <div class="rec-badge">Subgénero</div>
+                <h3>Cumbia Andina</h3>
+                <p>La fusión con música de los Andes</p>
+                <a href="#" class="rec-link">Explorar →</a>
             </div>
         </div>
     </section>
@@ -295,34 +318,6 @@
                 <h3>Match de Vinilos</h3>
                 <p>Encuentra las parejas de portadas de álbumes</p>
                 <button class="btn-play">Jugar ahora</button>
-            </div>
-        </div>
-    </section>
-
-    <!-- Recomendados Section -->
-    <section class="recommendations-section" id="recommendations">
-        <div class="section-header">
-            <h2 class="section-title">RECOMENDADOS DEL MES</h2>
-            <p class="section-subtitle">Selección curatorial especial</p>
-        </div>
-        <div class="recommendations-grid">
-            <div class="recommendation-card">
-                <div class="rec-badge">Artista del Mes</div>
-                <h3>Los Hijos del Sol</h3>
-                <p>Descubre la cumbia chicha de los 80s</p>
-                <a href="#" class="rec-link">Explorar →</a>
-            </div>
-            <div class="recommendation-card">
-                <div class="rec-badge">Álbum del Mes</div>
-                <h3>"Cumbia Beat"</h3>
-                <p>Compilación esencial de cumbia peruana</p>
-                <a href="#" class="rec-link">Escuchar →</a>
-            </div>
-            <div class="recommendation-card">
-                <div class="rec-badge">Subgénero</div>
-                <h3>Cumbia Andina</h3>
-                <p>La fusión con música de los Andes</p>
-                <a href="#" class="rec-link">Explorar →</a>
             </div>
         </div>
     </section>
